# whylogs-writer-bug-repro

./: Makefile  pyproject.toml  repro.py
